charts/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: ghcr.io/danmcfan/planet-emu-fast-api:latest
          imagePullPolicy: Always
          command:
            - "/bin/sh"
            - "-c"
            - "celery -A planet_emu.celery worker --loglevel=info"
          resources:
            limits:
              cpu: 100m
              memory: 256Mi
      imagePullSecrets:
        - name: ghcr
