charts/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres # Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: default
              subPath: postgresql/data
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
      volumes:
        - name: default
          persistentVolumeClaim:
            claimName: default
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
spec:
  ports:
    - port: 5432
      nodePort: 31234
  selector:
    app: postgres
  type: NodePort
