charts/static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: static
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
        - name: static
          image: ghcr.io/danmcfan/planet-emu-svelte:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
      imagePullSecrets:
        - name: ghcr
---
apiVersion: v1
kind: Service
metadata:
  name: static-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: static
  type: ClusterIP
